// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render component when can back 1`] = `
<header
  className="sc-bwzfXH bZnNro"
>
  <div
    className="sc-bdVaJa gNYCTH"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <i
      className="material-icons sc-bxivhb jrBfKJ"
      color="#fff"
      data-test="back"
      onClick={[MockFunction]}
    >
      arrow_back
    </i>
  </div>
  <h1
    className="sc-htpNat iTzsdR"
  >
    百人一首 - 
    This is subtitle
     -
  </h1>
</header>
`;

exports[`<Header /> should render component when can not back 1`] = `
<header
  className="sc-bwzfXH kabzOD"
>
  <h1
    className="sc-htpNat iTzsdR"
  >
    百人一首 - 
    This is subtitle
     -
  </h1>
</header>
`;
